# netremote

./: .cmake-format  .gitignore  .shellcheckrc  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SUPPORT.md  netplan.diff  vcpkg-configuration.json  vcpkg.json
api/: CMakeLists.txt
api/protocol/: CMakeLists.txt
api/protos/: NetRemoteDataStreamingService.proto  NetRemoteNetwork.proto  NetRemoteService.proto  WifiCore.proto
config/linux/network/netplan/: 10-network-netremote-all.yaml  CMakeLists.txt
linux/hostap-controller/: CMakeLists.txt  Placeholder.cxx
linux/wpa-controller/: CMakeLists.txt  Hostapd.cxx  ProtocolHostapd.cxx  WpaCommand.cxx  WpaCommandGet.cxx  WpaCommandSet.cxx  WpaCommandStatus.cxx  WpaController.cxx  WpaKeyValuePair.cxx  WpaResponse.cxx  WpaResponseParser.cxx
linux/wpa-controller/include/Wpa/: Hostapd.hxx  IHostapd.hxx  ProtocolHostapd.hxx  ProtocolWpa.hxx  WpaCommand.hxx  WpaCommandGet.hxx  WpaCommandStatus.hxx  WpaController.hxx  WpaCore.hxx  WpaKeyValuePair.hxx  WpaResponse.hxx  WpaResponseParser.hxx  WpaResponseStatus.hxx
packaging/deb/: CMakeLists.txt
packaging/deb/config-netplan/: CMakeLists.txt
packaging/deb/config-netplan/scripts/: config  confnet  confnetplan  postinst  postrm  templates
packaging/deb/network-config/: CMakeLists.txt
packaging/deb/network-config/scripts/: config  confnetplan  postinst  postrm  templates
packaging/deb/server/: CMakeLists.txt
packaging/deb/server/scripts/: config  confnetdiscovery  postinst  postrm  templates  test-config-server-discovery.sh
protocol/: CMakeLists.txt  WifiApControl.proto  WifiApControlService.proto  WifiCore.proto
protocol/microsoft/wifi/remote/: WifiCore.proto  WifiRemote.proto  WifiRemoteService.proto
protocol/microsoft/wifi/test/: WifiApControl.proto  WifiApControlService.proto  WifiCore.proto
protocol/protos/: NetRemote.proto  NetRemoteCallbackService.proto  NetRemoteDataStream.proto  NetRemoteDataStreamingService.proto  NetRemoteNetwork.proto  NetRemoteService.proto  NetRemoteWifi.proto  Network8021x.proto  NetworkCore.proto  WifiCore.proto
src/: CMakeLists.txt
src/apmanager/: AccessPointManager.cxx  CMakeLists.txt
src/client/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/client/: CMakeLists.txt  NetRemoteServerConnection.cxx
src/common/dotnet/: CMakeLists.txt
src/common/dotnet/NetRemoteClient/: NetRemoteClient.cs  NetRemoteClient.csproj
src/common/dotnet/NetRemoteClientUnitTest/: UnitTestNetRemoteClient.cs
src/common/dotnet/NetRemoteService/: NetRemoteService.csproj  Program.cs
src/common/net/: CMakeLists.txt
src/common/net/core/: CMakeLists.txt  (+1 more)
src/common/server/: CMakeLists.txt  NetRemoteDiscoveryDnssd.cxx  NetRemoteDiscoveryService.cxx  NetRemoteServer.cxx  NetRemoteServerConfiguration.cxx  NetRemoteServerJsonConfiguration.cxx
src/common/service/: CMakeLists.txt  NetRemoteApiTrace.cxx  NetRemoteApiTrace.hxx  NetRemoteCallbackService.cxx  NetRemoteDataStreamingReactors.cxx  NetRemoteDataStreamingReactors.hxx  NetRemoteDataStreamingService.cxx  NetRemoteDiscoveryService.cxx  NetRemoteService.cxx  NetRemoteWifiApiTrace.cxx  NetRemoteWifiApiTrace.hxx
src/common/shared/: CMakeLists.txt
src/common/tools/: CMakeLists.txt
src/dotnet/: CMakeLists.txt  NetRemote.sln  WifiRemote.sln
src/dotnet/NetRemoteClient/: NetRemoteClient.csproj
src/dotnet/NetRemoteClientUnitTest/: NetRemoteClientUnitTest.csproj  UnitTestNetRemoteClient.cs
src/dotnet/NetRemoteService/: NetRemoteService.csproj  Program.cs
src/dotnet/WifiRemoteClient/: NetRemoteClient.cs  NetRemoteClient.csproj  WifiRemoteClient.cs  WifiRemoteClient.csproj
src/dotnet/WifiRemoteClientUnitTest/: NetRemoteClientUnitTest.csproj  UnitTestNetRemoteClient.cs  UnitTestWifiRemoteClient.cs  WifiRemoteClientUnitTest.csproj
src/dotnet/WifiRemoteService/: NetRemoteService.csproj  Program.cs  WifiRemoteService.csproj
src/linux/: CMakeLists.txt  README.md
src/linux/libnl-helpers/: CMakeLists.txt  Ieee80211Nl80211Adapters.cxx  Netlink80211.cxx  Netlink80211Interface.cxx  Netlink80211ProtocolState.cxx  Netlink80211Wiphy.cxx  Netlink80211WiphyBand.cxx  Netlink80211WiphyBandFrequency.cxx  NetlinkErrorCategory.cxx  NetlinkException.cxx  NetlinkMessage.cxx  NetlinkRoute.cxx  NetlinkSocket.cxx
src/linux/net/: CMakeLists.txt  NetworkOperationsLinux.cxx
src/linux/server/: CMakeLists.txt  Main.cxx  NetRemoteDiscoveryServiceLinuxDnssd.cxx  NetRemoteDiscoveryServiceLinuxDnssd.hxx  NetworkOperationsLinux.cxx  NetworkOperationsLinux.hxx  SystemdResolvedDnssd.cxx  SystemdResolvedDnssd.hxx
src/linux/tools/: CMakeLists.txt
src/linux/wpa-controller/: CMakeLists.txt  Hostapd.cxx  HostapdException.cxx  ProtocolHostapd.cxx  ProtocolWpa.cxx  WpaCommand.cxx  WpaCommandGet.cxx  WpaCommandGetConfig.cxx  WpaCommandSet.cxx  WpaCommandStatus.cxx  WpaControlSocket.cxx  WpaControlSocketConnection.cxx  WpaController.cxx  WpaCore.cxx  WpaEvent.cxx  WpaEventHandler.cxx  WpaKeyValuePair.cxx  WpaParsingUtilities.cxx  WpaParsingUtilities.hxx  WpaResponse.cxx  WpaResponseParser.cxx
src/server/: CMakeLists.txt  Main.cxx  NetRemoteServer.cxx  NetRemoteServerConfiguration.cxx  WifiApControlServiceImpl.cxx  WifiApControlServiceImpl.hxx  WifiRemoteService.cxx  WifiRemoteService.hxx  WifiRemoteServiceImpl.cxx  WifiRemoteServiceImpl.hxx
src/service/: CMakeLists.txt  NetRemoteService.cxx  WifiRemoteService.cxx
src/shared/: CMakeLists.txt
src/shared/notstd/: CMakeLists.txt
src/shared/strings/: CMakeLists.txt
src/wifi/: CMakeLists.txt
src/wifi/core/: CMakeLists.txt
src/windows/: CMakeLists.txt  README.md
src/windows/server/: CMakeLists.txt  Main.cxx
tests/unit/: CMakeLists.txt  Main.cxx  TestNetRemoteCallbackServiceClient.cxx  TestNetRemoteCommon.cxx  TestNetRemoteCommon.hxx  TestNetRemoteDataStreamingReactors.cxx  TestNetRemoteDataStreamingReactors.hxx  TestNetRemoteDataStreamingServiceClient.cxx  TestNetRemoteServer.cxx  TestNetRemoteServiceClient.cxx  TestWifiRemoteServiceClient.cxx
tests/unit/linux/: CMakeLists.txt
tests/unit/net/: CMakeLists.txt
tests/unit/wifi/: CMakeLists.txt
(+373 files in other folders)
