
add_library(${PROJECT_NAME}-client STATIC "")

set(NETREMOTE_CLIENT_PUBLIC_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/include)
set(NETREMOTE_CLIENT_PUBLIC_INCLUDE_SUFFIX microsoft/net/remote)
set(NETREMOTE_CLIENT_PUBLIC_INCLUDE_PREFIX ${NETREMOTE_CLIENT_PUBLIC_INCLUDE}/${NETREMOTE_CLIENT_PUBLIC_INCLUDE_SUFFIX})

target_sources(${PROJECT_NAME}-client
    PRIVATE
        NetRemoteServerConnection.cxx 
    PUBLIC
    FILE_SET HEADERS
    BASE_DIRS ${NETREMOTE_CLIENT_PUBLIC_INCLUDE}
    FILES
        ${NETREMOTE_CLIENT_PUBLIC_INCLUDE_PREFIX}/NetRemoteServerConnection.hxx
)

target_link_libraries(${PROJECT_NAME}-client
    PRIVATE
        plog::plog
    PUBLIC
        ${PROJECT_NAME}-protocol
)

install(
    TARGETS ${PROJECT_NAME}-client
    EXPORT ${PROJECT_NAME}
    FILE_SET HEADERS
    PUBLIC_HEADER DESTINATION "${NETREMOTE_DIR_INSTALL_PUBLIC_HEADER_BASE}/${NETREMOTE_CLIENT_PUBLIC_INCLUDE_SUFFIX}"
)
