
add_library(${PROJECT_NAME}-net INTERFACE "")

set(NET_REMOTE_NET_PUBLIC_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/include)
set(NET_REMOTE_NET_PUBLIC_INCLUDE_SUFFIX microsoft/net)
set(NET_REMOTE_NET_PUBLIC_INCLUDE_PREFIX ${NET_REMOTE_NET_PUBLIC_INCLUDE}/${NET_REMOTE_NET_PUBLIC_INCLUDE_SUFFIX})

target_sources(${PROJECT_NAME}-net
    PUBLIC
    FILE_SET HEADERS
    BASE_DIRS ${NET_REMOTE_NET_PUBLIC_INCLUDE}
    FILES
        ${NET_REMOTE_NET_PUBLIC_INCLUDE_PREFIX}/INetworkOperations.hxx
        ${NET_REMOTE_NET_PUBLIC_INCLUDE_PREFIX}/IpAddressInformation.hxx
)

install(
    TARGETS ${PROJECT_NAME}-net
    EXPORT ${PROJECT_NAME}
    COMPONENT dev
    FILE_SET HEADERS
    PUBLIC_HEADER DESTINATION "${NETREMOTE_DIR_INSTALL_PUBLIC_HEADER_BASE}/${NET_REMOTE_NET_PUBLIC_INCLUDE_SUFFIX}"
)
